--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,21 +1,5 @@
-<h1>Header Goes Here</h1>
-<div>
-  <span>
-    <a [routerLink]="['/dashboard']" [queryParams]="{debug: true}" fragment="dashboard">
-      Dashboard
-    </a>
-  </span>
-  <span>
-    <a [routerLink]="['/profile']" [queryParams]="{debug: true}" fragment="profile">
-      Profile
-    </a>
-  </span>
-  <span>
-    <a [routerLink]="['/maps']" [queryParams]="{debug: true}" fragment="maps">
-      Maps
-    </a>
-  </span>
+<app-header></app-header>
+<div class="container mt-5">
+    <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
-
-<h1>Footer Goes Here</h1>
+<app-footer></app-footer>
