--- a/web/src/app/components/common/home.component.html
+++ b/web/src/app/components/common/home.component.html
@@ -9,7 +9,7 @@
                 <div class="row">
                     <div class="col-12 text-center">
                         <button type="button" class="btn btn-primary btn-lg" (click)="redirect('register')">Register</button>
-                        <button type="button" class="btn btn-primary btn-lg ml-3" (click)="redirect('register')">Sign In</button>
+                        <button type="button" class="btn btn-primary btn-lg ml-3" (click)="redirect('login')">Sign In</button>
                     </div>
                 </div>
             </div>
