Fixed some login page bugs added some code login api

--- a/web/src/app/components/users/login.component.html
+++ b/web/src/app/components/users/login.component.html
@@ -4,12 +4,11 @@
         <div class="container">
             <div class="row text-white">
                 <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
-                    <h1 class="display-4 py-2 text-truncate">Sign up</h1>
+                    <h1 class="display-4 py-2 text-truncate">Login</h1>
                     <div class="px-2">
 
                         <!-- Default form register -->
                         <form class="text-center" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-
                             <!-- E-mail -->
                             <input placeholder="E-mail" type="email" formControlName="email" class="form-control mb-4"
                                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
