--- a/web/src/app/components/users/dashboard.component.html
+++ b/web/src/app/components/users/dashboard.component.html
@@ -18,9 +18,87 @@
             </agm-marker>
 
         </agm-map>
-        <a href="#" class="btn btn-primary mt-2">Add Crisis Info</a>
+        <button class="btn btn-primary mt-2" (click)="openModal(template)">Add Crisis Info</button>
     </div>
     <div class="card-footer text-muted">
         Last update about 5 min ago
     </div>
 </div>
+
+
+<ng-template #template>
+    <div class="container">
+        <div class="modal-header">
+            <h4 class="modal-title pull-left">Submit Crisis information</h4>
+            <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form class="text-center" [formGroup]="saveCrisisInfo" (ngSubmit)="onSubmit()">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
+                        <input class="form-control" name="firstName" formControlName="firstName" placeholder="Firstname" type="text" required
+                            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" autofocus />
+                        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                            <div *ngIf="f.firstName.errors.required">Firstname is required</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
+                        <input class="form-control" name="lastName" formControlName="lastName" placeholder="Lastname" type="text" required
+                            [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                            <div *ngIf="f.lastName.errors.required">lastName is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
+                        <input class="form-control" name="email" formControlName="email" placeholder="E-mail" type="text" required
+                            [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                            <div *ngIf="f.email.errors.required">email is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
+                        <input class="form-control" name="location" formControlName="location" placeholder="Location" type="text" required
+                            [ngClass]="{ 'is-invalid': submitted && f.location.errors }" />
+                        <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
+                            <div *ngIf="f.location.errors.required">location is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
+                        <input class="form-control" name="subject" formControlName="subject" placeholder="Subject" type="text" required
+                            [ngClass]="{ 'is-invalid': submitted && f.subject.errors }" />
+                        <div *ngIf="submitted && f.subject.errors" class="invalid-feedback">
+                            <div *ngIf="f.subject.errors.required">subject is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <textarea style="resize:vertical;" class="form-control" formControlName="comment" placeholder="Message..." rows="6"
+                            name="comment" required
+                            [ngClass]="{ 'is-invalid': submitted && f.comment.errors }"></textarea>
+                        <div *ngIf="submitted && f.comment.errors" class="invalid-feedback">
+                            <div *ngIf="f.comment.errors.required">comment is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <button class="btn btn-success pull-left" type="submit">Send</button>
+
+                        <button type="button" class="btn btn-default btn-close pull-right" aria-label="Close"
+                            (click)="modalRef.hide()">Close</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    </div>
+</ng-template>
