--- a/web/src/app/components/users/dashboard.component.html
+++ b/web/src/app/components/users/dashboard.component.html
@@ -1,69 +1,79 @@
-<div class="container">
-    <div class="row m-5">
-        <div class="col-9 mapbox">
-            <div class="card text-center mt-3">
-                <div class="card-header">
-                    See the markers, where people needs your attention
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">Google Map</h5>
-                    <div class="form-group">
-                        <div class="form-group">
-                            <input placeholder="search for location" autocorrect="off" autocapitalize="off"
-                                spellcheck="off" type="text" class="form-control" #search [formControl]="searchControl">
-                        </div>
+<section class="content">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 mapbox">
+                <div class="card text-center mt-3">
+                    <div class="card-header">
+                        See the markers, where people needs your attention
                     </div>
-                    <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
-                        [zoomControl]="true" (mapClick)="mapClicked($event)" (mapReady)="mapReady($event)">
+                    <div class="card-body">
+                        <div class="form-group mapsearchbox p-3">
+                            <div class="input-group">
+                                <input placeholder="search for location" autocorrect="off" autocapitalize="off"
+                                    spellcheck="off" type="text" class="form-control border-right-0" #search
+                                    [formControl]="searchControl">
+                                    <span class="input-group-append bg-white border-left-0">
+                                        <span class="input-group-text bg-transparent">
+                                            <i class="fa fa-search"></i>
+                                        </span>
+                                    </span>
+                            </div>
+                        </div>
+                        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
+                            [zoomControl]="true" (mapClick)="mapClicked($event)" (mapReady)="mapReady($event)">
 
-                        <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m.label, i)"
-                            [latitude]="m.lat" [longitude]="m.lng" [label]="m.label" [markerDraggable]="m.draggable"
-                            (dragEnd)="markerDragEnd(m, $event)" iconUrl="./assets/images/{{m.color}}-dot.png">
+                            <agm-marker *ngFor="let m of markers; let i = index"
+                                (markerClick)="clickedMarker(m.label, i)" [latitude]="m.lat" [longitude]="m.lng"
+                                [label]="m.label" [markerDraggable]="m.draggable" (dragEnd)="markerDragEnd(m, $event)"
+                                iconUrl="./assets/images/{{m.color}}-dot.png">
 
-                            <agm-info-window>
-                                <div>Help Type: <strong>{{m.type}}</strong></div>
-                                <div>Numbers: <strong>{{m.number}}</strong></div>
-                                <div>Pending since: <strong>2 days</strong></div>
-                                <button class="btn btn-primary btn-sm mt-1" *ngIf="m.number > 0; else elseBlock">Provide help</button><!--Based on the Actor condition will work-->
-                                <ng-template #elseBlock><h5>Served</h5></ng-template>
-                            </agm-info-window>
+                                <agm-info-window>
+                                    <div>Help Type: <strong>{{m.type}}</strong></div>
+                                    <div>Numbers: <strong>{{m.number}}</strong></div>
+                                    <div>Pending since: <strong>2 days</strong></div>
+                                    <button class="btn btn-primary btn-sm mt-1"
+                                        *ngIf="m.number > 0; else elseBlock">Provide help</button>
+                                    <!--Based on the Actor condition will work-->
+                                    <ng-template #elseBlock>
+                                        <h5>Served</h5>
+                                    </ng-template>
+                                </agm-info-window>
 
-                        </agm-marker>
+                            </agm-marker>
 
-                    </agm-map>
-                </div>
-                <!-- <div class="card-footer text-muted">
+                        </agm-map>
+                    </div>
+                    <!-- <div class="card-footer text-muted">
                     Last update about 5 min ago
                 </div> -->
-            </div>
-        </div>
-        <div class="col-3 markerbox">
-            <div class="card text-center mt-3">
-                <div class="card-header">
-                    Status <br>
-                    Updated 11 min ago
                 </div>
-                <div class="card-body">
-                    <hr>
-                    <h5 class="card-title">Served</h5>
+            </div>
+            <div class="col-3 markerbox" [hidden]="false">
+                <div class="card text-center">
+                    <div class="card-header">
+                        Status <br>
+                        Updated 11 min ago
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Served</h5>
                         <p class="card-text">Food: 270</p>
                         <p class="card-text">Drinking Water: 150</p>
                         <p class="card-text">Medicine: 200</p>
                         <p class="card-text">Others: 100</p>
-                    <hr>
-                    <div *ngFor="let m of markers; let i = index" class="float-left m-2">
-                        <img src="./assets/images/{{m.color}}-dot.png" /> {{m.type}}
+                        <hr>
+                        <div *ngFor="let m of markers; let i = index" class="float-left m-2">
+                            <img src="./assets/images/{{m.color}}-dot.png" /> {{m.type}}
+                        </div>
                     </div>
-                </div>
-                <hr>
-                <div class="card-footer text-muted">
-                    <a href="javascript:void(0)" class="btn btn-info mt-2" (click)="openModal(template)">ADD CRISIS INFO</a>
+                    <div class="card-footer text-muted">
+                        <a href="javascript:void(0)" class="btn btn-info mt-2" (click)="openModal(template)">ADD CRISIS
+                            INFO</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
+</section>
 
 <ng-template #template>
     <div class="container">
@@ -77,15 +87,16 @@
             <form class="text-center" [formGroup]="saveCrisisInfo" (ngSubmit)="onSubmit()">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
-                        <input class="form-control" name="firstName" formControlName="firstName" placeholder="Firstname" type="text" required
-                            [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" autofocus />
+                        <input class="form-control" name="firstName" formControlName="firstName" placeholder="Firstname"
+                            type="text" required [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }"
+                            autofocus />
                         <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                             <div *ngIf="f.firstName.errors.required">Firstname is required</div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6" style="padding-bottom: 10px;">
-                        <input class="form-control" name="lastName" formControlName="lastName" placeholder="Lastname" type="text" required
-                            [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                        <input class="form-control" name="lastName" formControlName="lastName" placeholder="Lastname"
+                            type="text" required [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
                         <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                             <div *ngIf="f.lastName.errors.required">lastName is required</div>
                         </div>
@@ -93,8 +104,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
-                        <input class="form-control" name="email" formControlName="email" placeholder="E-mail" type="text" required
-                            [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                        <input class="form-control" name="email" formControlName="email" placeholder="E-mail"
+                            type="text" required [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                             <div *ngIf="f.email.errors.required">email is required</div>
                         </div>
@@ -102,8 +113,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
-                        <input class="form-control" name="location" formControlName="location" placeholder="Location" type="text" required
-                            [ngClass]="{ 'is-invalid': submitted && f.location.errors }" />
+                        <input class="form-control" name="location" formControlName="location" placeholder="Location"
+                            type="text" required [ngClass]="{ 'is-invalid': submitted && f.location.errors }" />
                         <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
                             <div *ngIf="f.location.errors.required">location is required</div>
                         </div>
@@ -111,8 +122,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12" style="padding-bottom: 10px;">
-                        <input class="form-control" name="subject" formControlName="subject" placeholder="Subject" type="text" required
-                            [ngClass]="{ 'is-invalid': submitted && f.subject.errors }" />
+                        <input class="form-control" name="subject" formControlName="subject" placeholder="Subject"
+                            type="text" required [ngClass]="{ 'is-invalid': submitted && f.subject.errors }" />
                         <div *ngIf="submitted && f.subject.errors" class="invalid-feedback">
                             <div *ngIf="f.subject.errors.required">subject is required</div>
                         </div>
@@ -120,8 +131,8 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                        <textarea style="resize:vertical;" class="form-control" formControlName="comment" placeholder="Message..." rows="6"
-                            name="comment" required
+                        <textarea style="resize:vertical;" class="form-control" formControlName="comment"
+                            placeholder="Message..." rows="6" name="comment" required
                             [ngClass]="{ 'is-invalid': submitted && f.comment.errors }"></textarea>
                         <div *ngIf="submitted && f.comment.errors" class="invalid-feedback">
                             <div *ngIf="f.comment.errors.required">comment is required</div>
